--- a/backend/package.json
+++ b/backend/package.json
@@ -16,6 +16,7 @@
   "license": "ISC",
   "dependencies": {
     "@aws-sdk/client-s3": "^3.617.0",
+    "body-parser": "^1.20.2",
     "express": "^4.19.2",
     "express-validator": "^7.1.0",
     "joi": "^17.13.3",
