--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,11 @@
   "main": "server.js",
   "type": "module",
   "scripts": {
-    "start": "nodemon server"
+    "start": "nodemon server.js",
+    "test": "jest",
+    "test-w": "jest --watchAll",
+    "lint": "eslint .",
+    "format": "prettier --write ."
   },
   "keywords": [
     "express",
@@ -16,6 +20,7 @@
   "license": "ISC",
   "dependencies": {
     "@aws-sdk/client-s3": "^3.617.0",
+    "babel-jest": "^29.7.0",
     "body-parser": "^1.20.2",
     "express": "^4.19.2",
     "express-validator": "^7.1.0",
@@ -26,9 +31,12 @@
     "redis": "^4.6.15"
   },
   "devDependencies": {
+    "@types/supertest": "^6.0.2",
     "eslint": "^9.7.0",
     "eslint-config-prettier": "^9.1.0",
+    "jest": "^29.7.0",
     "nodemon": "^3.1.4",
-    "prettier": "^3.3.3"
+    "prettier": "^3.3.3",
+    "supertest": "^7.0.0"
   }
 }
