--- a/backend/package.json
+++ b/backend/package.json
@@ -23,6 +23,7 @@
     "@aws-sdk/client-s3": "^3.617.0",
     "babel-jest": "^29.7.0",
     "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "express-validator": "^7.1.0",
