--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,7 @@
 MONGODB_URI=mongodb+srv://recipe-develop:qJD8EZsur1aG1CIE@cluster0.r8vdork.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+# MONGODB_URI=mongodb://localhost:27017/test
 PORT=9000
+AWS_ACCESS_KEY_ID=AKIAQMBVQTGBES4C3DO3
+AWS_SECRET_ACCESS_KEY=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
+AWS_REGION=us-east-1
+AWS_BUCKET_NAME=warisenibo
