--- a/frontend/my-recipe-app/.env
+++ b/frontend/my-recipe-app/.env
@@ -1,2 +1,1 @@
-BASE_URL=http://localhost:9000
-#BASE_URL=https://full-stack-recipe-management-system.onrender.com
+BASE_URL=https://full-stack-recipe-management-system.onrender.com
