--- a/backend/.env
+++ b/backend/.env
@@ -3,5 +3,6 @@ MONGODB_URI=mongodb+srv://recipe-develop:qJD8EZsur1aG1CIE@cluster0.r8vdork.mongo
 PORT=9000
 AWS_ACCESS_KEY_ID=AKIAQMBVQTGBES4C3DO3
 AWS_SECRET_ACCESS_KEY=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
-AWS_REGION=us-east-1
-AWS_BUCKET_NAME=warisenibo
+AWS_REGION=us-east-2
+AWS_BUCKET_NAME=betareviews
+AWS_PREFIX=https://betareviews.s3.us-east-2.amazonaws.com/
