--- a/backend/package.json
+++ b/backend/package.json
@@ -12,6 +12,10 @@
     "format": "prettier --write .",
     "swagger-autogen": "node ./swagger.js"
   },
+  "engines": {
+    "node": ">=21.6.1",
+    "npm": ">=10.2.4"
+  },
   "keywords": [
     "express",
     "node",
@@ -32,6 +36,7 @@
     "mongoose": "^8.5.1",
     "multer": "^1.4.5-lts.1",
     "redis": "^4.6.15",
+    "sharp": "^0.33.4",
     "swagger-autogen": "^2.23.7",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1"
