--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,18 +1,11 @@
-FROM node:lts AS builder
-
-RUN apt-get update \
-  && apt-get install redis-server -y
-
-LABEL maintainer="georgeomiebi@gmail.com"
-
-WORKDIR /app
-
+FROM node:current-alpine3.16 as build
+WORKDIR /backend
 COPY package*.json ./
-
 RUN npm install
-
 COPY . .
 
-EXPOSE 9000
-
-CMD ["node", "server.js"]
+FROM node:current-alpine3.16 as prod
+WORKDIR /app
+COPY --from=build /backend ./
+EXPOSE 3000
+CMD node server.js
